# MasterField

./: .gitignore  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  discussion_AI.md  pyproject.toml
cluster/: README.md  __init__.py  mm_equations.py  neural_master_field.py  one_matrix.py  qcd2.py  requirements.txt  submit.pbs  submit_cuntz.pbs  submit_scaling.pbs  submit_tek.pbs  test_mm.py  train.py
cuntz_bootstrap/: __init__.py  config.py  conftest.py  cyclicity.py  diagnostics.py  exact_mm.py  find_exact_mm.py  fock.py  gw_validation.py  hermitian_operator.py  lattice_symmetry.py  master_operator.py  matfree_expm.py  mm_loss.py  optimize.py  phase_a_gw.py  phase_b_qcd2.py  phase_c_d3.py  phase_d_d4.py  qcd2_exact.py  qcd2_q2.py  qcd2_supervised.py  reflection_positivity.py  test_cuntz_bootstrap.py  test_exact_mm.py  test_matfree_expm.py  total_loss.py  train.py  unitarity.py  wilson_loops.py
master_field/: INSTRUCTIONS.md  bootstrap_sdp.py  config.py  cuntz_fock.py  lattice.py  neural_loop.py  neural_master_field.py  one_matrix.py  schwinger_dyson.py  test_master_field.py  test_mm.py  test_qcd2.py  train.py  visualize.py
reference/: cuntz_bootstrap.md  gross_witten_model.md  qcd2_master_field.md  tek_master_field.md
results/phase_a_v2/: phase_a_v2_summary.json
results/phase_c_d3/: q1_d3_Ltrunc3_lam10.0.json
results/step2/: D2_Ltrunc3_lam5.0.json
results/step3_q2/: q2_D2_Ltrunc3_lam5.0.json  (+1 more)
tek_master_field/: __init__.py  config.py  conftest.py  gross_witten.py  mm_loss.py  observables.py  optimize.py  phase_b.py  phase_b_mm.py  tek.py  test_tek.py  train.py
(+8 files in other folders)
