[project]
name = "master-field"
version = "0.1.0"
description = "Large-N matrix model master field computation via ML optimisation"
requires-python = ">=3.10"
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "scipy",
    "matplotlib",
    "optax",
    "flax",
    "cvxpy",
    "torch",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["master_field"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "NPY", # numpy-specific rules
]
ignore = [
    "E501",  # line too long (let formatter handle)
    "E741",  # ambiguous variable name (physics code uses single letters)
]

[tool.ruff.lint.isort]
known-first-party = ["master_field"]

[tool.ruff.format]
quote-style = "double"
